# vanity-address

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  package-lock.json  plan.md
.cursor/rules/: project-context.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-downloads.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
Formula/: vanity-address.rb
docs/: HOMEBREW.md  INSTALL.md  NPM.md  USAGE.md
homebrew-tap/: README.md
npm/vanity-address/: README.md  package.json
npm/vanity-address-darwin-arm64/: package.json
npm/vanity-address-darwin-x64/: package.json
npm/vanity-address-linux-x64/: package.json
npm/vanity-address-win32-x64/: package.json
scripts/: prepare-npm.sh  publish-npm.sh  sync-homebrew-tap.sh  update-homebrew-formula.sh
src/: main.rs
vanity-address/: Cargo.toml
vanity-address/src/: banner.rs  json_output.rs  main.rs  menu.rs  terminal.rs  warnings.rs
vanity-app/: README.md  index.html  package-lock.json  package.json
vanity-app/src/: api.ts  main.ts  styles.css
vanity-app/src-tauri/: Cargo.toml  tauri.conf.json
vanity-app/src-tauri/icons/: icon.icns
vanity-app/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
vanity-core/: Cargo.toml
vanity-core/src/: chain.rs  estimate.rs  grinder.rs  lib.rs  pattern.rs  system.rs
vanity-core/src/chains/: algorand.rs  aptos.rs  bitcoin_like.rs  cardano.rs  cosmos.rs  evm.rs  filecoin.rs  hedera.rs  icp.rs  kaspa.rs  mod.rs  near.rs  polkadot.rs  ripple.rs  solana.rs  stellar.rs  sui.rs  tezos.rs  ton.rs  tron.rs  util.rs
