[package]
name = "vanity-address"
version = "0.3.4"
edition = "2021"
description = "Fast, local multi-chain vanity address generator"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/yudizaxay/vanity-address"
homepage = "https://github.com/yudizaxay/vanity-address"
documentation = "https://github.com/yudizaxay/vanity-address#readme"
# crates.io allows at most 5 keywords
keywords = ["vanity", "solana", "ethereum", "bitcoin", "cli"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "vanity-address"
path = "src/main.rs"

[dependencies]
vanity-core = { path = "../vanity-core", version = "0.3.4" }
clap = { version = "4", features = ["derive", "color"] }
colored = "3"
indicatif = "0.18"
crossterm = "0.29"
ctrlc = "3.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
