[package]
name = "vanity-core"
version = "0.1.0"
edition = "2021"
description = "Multi-chain vanity address grinding core library"
license = "MIT"

[dependencies]
rayon = "1.7"
solana-sdk = "1.18"
secp256k1 = { version = "0.29", features = ["rand"] }
sha3 = "0.10"
sha2 = "0.10"
ripemd = "0.1"
bech32 = "0.11"
blake2 = "0.10"
stellar-strkey = "0.0.9"
rand = "0.8"
hex = "0.4"
bs58 = "0.5"
sysinfo = "0.33"
