[package]
name = "vanity-core"
version = "0.3.0"
edition = "2021"
description = "Multi-chain vanity address grinding core library"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/yudizaxay/vanity-address"
homepage = "https://github.com/yudizaxay/vanity-address"
documentation = "https://docs.rs/vanity-core"
keywords = ["vanity", "cryptocurrency", "wallet", "blockchain", "keypair"]
categories = ["cryptography"]

[dependencies]
rayon = "1.7"
solana-sdk = "1.18"
secp256k1 = { version = "0.29", features = ["rand"] }
sha3 = "0.10"
sha2 = "0.10"
ripemd = "0.1"
bech32 = "0.11"
blake2 = "0.10"
stellar-strkey = "0.0.9"
rand = "0.10"
hex = "0.4"
bs58 = "0.5"
sysinfo = "0.33"
